--- a/DataLayers/i18n/es.json
+++ b/DataLayers/i18n/es.json
@@ -14,12 +14,12 @@
 
     // coverage: bee houses
     "bee-houses.name": "Cobertura: Colmenas",
-    "bee-houses.range": "Rango Flores",
+    "bee-houses.range": "Rango flores",
 
     // coverage: Junimo huts
     "junimo-huts.name": "Cobertura: Cabaña Junimo",
-    "junimo-huts.can-harvest": "Puede Cosechar",
-    "junimo-huts.cannot-harvest": "No Puede Cosechar",
+    "junimo-huts.can-harvest": "Puede cosechar",
+    "junimo-huts.cannot-harvest": "No puede cosechar",
 
     // coverage: scarecrows
     "scarecrows.name": "Cobertura: Espantapájaros",
@@ -34,18 +34,18 @@
     // crops: harvest
     "crop-harvest.name": "Cultivos: Listos para cosechar",
     "crop-harvest.ready": "Listo",
-    "crop-harvest.not-ready": "No Listo Aún",
-    "crop-harvest.not-enough-time": "Tiempo Insuficiente",
+    "crop-harvest.not-ready": "No listo aún",
+    "crop-harvest.not-enough-time": "Tiempo insuficiente",
 
     // crops: watered
     "crop-water.name": "Cultivos: Regados",
     "crop-water.watered": "Cultivo Regado",
-    "crop-water.dry": "Cultivo Seco",
+    "crop-water.dry": "Cultivo seco",
 
     // crops: water for paddy crops
     "crop-paddy-water.name": "Cultivos: Agua para arrozales",
     "crop-paddy-water.in-range": "Cerca del agua",
-    "crop-paddy-water.not-in-range": "Tierra Seca",
+    "crop-paddy-water.not-in-range": "Tierra seca",
 
     // crops: fertilized
     "crop-fertilizer.name": "Cultivos: Fertilizados",
@@ -60,12 +60,12 @@
     "machines.finished": "Finalizado",
 
     // tile grid
-    "grid.name": "Tile Grid", // TODO
+    "grid.name": "Cuadrícula de rango",
 
     // tillable
-    "tillable.name": "Tierra Cultivable",
+    "tillable.name": "Tierra cultivable",
     "tillable.tillable": "Cultivable",
-    "tillable.tilled": "Tilled", // TODO
+    "tillable.tilled": "Labrado", 
     "tillable.occupied": "Ocupada",
-    "tillable.not-tillable": "No Cultivable"
+    "tillable.not-tillable": "No cultivable"
 }
